istio/03-01-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: svc-entry
  namespace: lin-test
spec:
  hosts:
  - "www.baidu.com"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: ServiceEntry
# metadata:
#   name: svc-entry
#   namespace: lin-test
# spec:
#   hosts:
#   - "www.baidu.com"
#   ports:
#   - number: 80
#     name: http
#     protocol: HTTP
#   - number: 443
#     name: https
#     protocol: HTTPS
#   location: MESH_EXTERNAL
#   resolution: STATIC
#   endpoints:
#   - address: 192.168.0.100

# resolution的定义, 它用来定义服务发现的模式，它有三种值，分别为 DNS、STATIC 和 NONE

# DNS 模式:，当 pod 里的应用发送 www.baidu.com 请求的时候，会使用dns来查找域名指定的服务器，在这种情况下，就和我们平时打开一个网站逻辑完全一样，所以肯定是可以正常访问的。

# STATIC 模式: 当 pod 里的应用发送 www.baidu.com 请求的时候，会向请求转到 endpoints 字段指定的IP 服务器，我们这里指向的是一个内网IP地址，所以无法正常响应。对于endpoints字段可以多个，并允许对其根据 LB 权重设置, 有兴趣的可以了解下 https://istio.io/latest/zh/docs/reference/config/networking/service-entry/#ServiceEntry-Endpoint

# NONE 模式: 要小心使用，在这种模式下，如果未指定任何IP地址的话，则默认将允许发送到任意IP上。
